tests/sumo/output/vtypeprobe/errors/freq_negative/errors.sumo
Warning: VTypeProbes are deprecated. Use fcd-output devices (assigned to the vType) instead.
Error: Negative sampling frequency (in vTypeProbe 'test1').
Quitting (on error).
